fix cornercase in firefox not clipping text

--- a/src/styles/renderer/_categorical.scss
+++ b/src/styles/renderer/_categorical.scss
@@ -14,6 +14,7 @@
   }
 
   :last-child {
+    width: 0; // set 0 width for firefox to have proper ...
     flex: 1 1 auto;
     overflow: hidden;
     text-overflow: ellipsis;
